fixed models/controllers/repos/html uniformity

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,10 @@
-spring.jpa.hibernate.ddl-auto=none
-
+spring.datasource.url= jdbc:h2:file:/data/demo
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.platform=h2
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# Hibernate ddl auto (create, create-drop, update)
+spring.jpa.hibernate.ddl-auto=create
+# show sql commands
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
